# pagecache

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  build.bat
scripts/: build.sh  run_bench.sh
src/api/: UserAPI.cpp  UserAPI.h
src/bench/: io_benchmark.cpp
src/cache/: Eviction.cpp  Eviction.h  Page.cpp  Page.h  PageCache.cpp  PageCache.h
src/fs/: File.cpp  File.h  Inode.cpp  Inode.h
src/io/: IOPath.h  ReadPath.cpp  Readahead.cpp  Readahead.h  Writeback.cpp  Writeback.h
src/metrics/: Counters.cpp  Counters.h
src/scheduler/: IOThreadPool.cpp  IOThreadPool.h
tests/: eviction_tests.cpp  page_cache_tests.cpp
